# Re

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
server/api/: admin.py  models.py  routers.py  tasks.py  views.py
server/api/migrations/: 0001_initial.py  0002_alter_chapter_options_remove_chapter_index_and_more.py  0003_auto_20231003_1417.py  0003_remove_title_count_like_remove_title_count_view_and_more.py  0004_alter_title_options.py  0005_alter_tag_options.py  0007_auto_20231003_1417.py
server/api/serializers/: chapter.py  tag.py  title.py  volume.py
server/api/utils/: chapter.py  title.py
server/server/: settings.py  urls.py
server/tests/: test_endpoints.py
